--- a/public/styles/TextMessage.css
+++ b/public/styles/TextMessage.css
@@ -16,6 +16,14 @@
     font-size: 12px;
 }
 
+.TextMessage span {
+    opacity: 0;
+}
+
+.TextMessage span.revealed {
+    opacity: 1;
+}
+
 .TextMessageButton {
     margin: 0;
     border: 0;
